--- a/manifest.plist
+++ b/manifest.plist
@@ -29,7 +29,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.cmcc.yqt.yqingcenter</string>
+				<string>com.gep.GepWallet</string>
 				<key>bundle-version</key>
 				<string>1.0.0</string>
 				<key>kind</key>
